Mon May 22 17:11:25 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (regopt): Scan HKLM if HKCU scan fails.

Mon May 16 23:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* dir.cc (rmdir): Care for misleading error messages
	when trying to remove a directory on a samba share.
        Eliminate superfluous else branch.
	* syscalls.cc (_rename): Additional check for ERROR_FILE_EXISTS
	if MoveFile fails.

Sun May 21 20:51:44 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move uinfo_init call to before sigproc_init to
	avoid a race.
	(noload): Add an extra argument for debugging.
	* uinfo.cc (uinfo_init): Eliminate test for multiple calls.
	(getlogin): Assume that uinfo_init has already been called.

Sat May 20 01:34:57 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interruptible): Add an argument to control whether
	function just checks for validity.  Flag module handle == 0 as
	noninterrupible.
	(call_handler): Always acquire and release ebp lock.  Loop for only a
	fixed amount of time attempting to grab mutos and find an interruptible
	PC.

2000-05-19  DJ Delorie  <dj@cygnus.com>

	* syscalls.cc (setmode): change mode of any matching FILE* also.

Thu May 18 17:28:19 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Remove external.h dependency.
	* dcrt0.cc (sigthread::init): Move here from sigproc.h.
	* sigproc.h (sigthread): Move init to dcrt0.cc.

Thu May 18 01:28:02 2000  Christopher Faylor <cgf@cygnus.com>

	* select.cc (thread_pipe): Add paranoid check to ensure thread
	termination.
	* external.cc: Eliminate obsolete include.
	* getopt.c (getopt_long): Fix compiler warning.
	* shared.h: Moved PID_ definitions to include/sys/cygwin so that they
	can be used by external programs.
	* include/sys/cygwin.h: Move external definitions here.  Include
	sys/resource.h to avoid having to do this everywhere.

Thu May 18 01:04:02 2000  Christopher Faylor <cgf@cygnus.com>
